// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsFeedSocialControl matches snapshot 1`] = `
<div>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white hover:shadow-sphere-primary border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
      type="button"
    >
      <svg
        class="lucide lucide-message-circle"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
    </button>
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white hover:shadow-sphere-primary border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
      type="button"
    >
      <svg
        class="lucide lucide-link2"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 17H7A5 5 0 0 1 7 7h2"
        />
        <path
          d="M15 7h2a5 5 0 1 1 0 10h-2"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
    </button>
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border text-white border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[54px] h-[54px] border-none bg-white dark:bg-blue-700 hover:bg-white dark:hover:bg-blue-700 shadow-sphere-medium hover:shadow-sphere-medium"
      type="button"
    >
      <div
        class="absolute inset-0 rounded-full origin-center bg-red-100 transition-all duration-400 z-0 scale-0"
      />
      <svg
        class="w-4 h-4 animate-bouncy relative z-2 text-red-100 dark:text-white"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          fill="currentColor"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NewsFeedSocialControl matches snapshot when liked 1`] = `
<div>
  <div
    class="flex items-center gap-1"
  >
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white hover:shadow-sphere-primary border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
      type="button"
    >
      <svg
        class="lucide lucide-message-circle"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
        />
      </svg>
    </button>
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border bg-primary text-white hover:shadow-sphere-primary border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[43px] h-[43px] shadow-sphere-secondary hover:bg-blue-50"
      type="button"
    >
      <svg
        class="lucide lucide-link2"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 17H7A5 5 0 0 1 7 7h2"
        />
        <path
          d="M15 7h2a5 5 0 1 1 0 10h-2"
        />
        <line
          x1="8"
          x2="16"
          y1="12"
          y2="12"
        />
      </svg>
    </button>
    <button
      aria-label="Social Button"
      class="font-roboto inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-all duration-300 ease-in-out outline-none focus-visible:outline-none disabled:pointer-events-none disabled:opacity-50 focus:border-ring border text-white border-primary rounded-full p-0 relative dark:hover:opacity-1 hover:opacity-1 w-[54px] h-[54px] border-none bg-white dark:bg-blue-700 shadow-sphere-destructive hover:shadow-sphere-destructive"
      type="button"
    >
      <div
        class="absolute inset-0 rounded-full origin-center bg-red-100 transition-all duration-400 z-0 scale-100"
      />
      <svg
        class="w-4 h-4 animate-bouncy relative z-2 text-white"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"
          fill="currentColor"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </button>
  </div>
</div>
`;
